# python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  cli.py  pyproject.toml
.codex/: instructions.md
10-projects/1-boligkjop/: CLAUDE.md  CONTEXT.md  sverm.db
10-projects/1-boligkjop/10-cases/: CASES.md
docs/: ARCHITECTURE.md  SEED-DESIGN.md
examples/: boligkjop.json  karriere.json  kommune-beslutning.json  produktlansering.json  restaurant.json
sverm/: __init__.py  cli.py  config.py  db.py  debrief.py  encoding.py  launch.py  models.py  paths.py  platform.py  runtime.py  setup.py
